--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <a href="https://git-scm.com/book/en/v2" class="list-group-item list-group-item-action" target="_blank">Git Book</a>
     </div>
     <div class="list-group w-25">
+      <a href="https://github.com/" class="list-group-item list-group-item-action" target="_blank">GitHub</a>
       <a href="https://pricemyfuneral.test/" class="list-group-item list-group-item-action" target="_blank">PriceMyFuneral.test</a>
       <a href="https://pricemyfuneral.com/" class="list-group-item list-group-item-action" target="_blank">PriceMyFuneral.com</a>
     </div>
