--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
     <div class="list-group w-25">
       <a href="https://github.com/" class="list-group-item list-group-item-action" target="_blank">GitHub</a>
+      <a href="https://trello.com/" class="list-group-item list-group-item-action" target="_blank">Trello</a>
       <a href="https://pricemyfuneral.test/" class="list-group-item list-group-item-action" target="_blank">PriceMyFuneral.test</a>
       <a href="https://pricemyfuneral.com/" class="list-group-item list-group-item-action" target="_blank">PriceMyFuneral.com</a>
     </div>
